<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registrierung"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/registrieren"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:paddingTop="40dp"
        android:singleLine="true"
        android:inputType="text"
        android:autofillHints="name"/>

    <EditText
        android:id="@+id/nachname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nachname"
        android:paddingTop="10dp"
        android:singleLine="true"
        android:inputType="text"
        android:autofillHints="nachname"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/birthDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:text="@string/_00_00_0000"
            android:paddingTop="10dp"
            android:textSize="20sp"
            tools:ignore="TextViewEdits" />

        <Button
            android:id="@+id/birthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ausw_hlen"
            app:cornerRadius="50dp" />

    </LinearLayout>

    <EditText
        android:id="@+id/eMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:paddingTop="10dp"
        android:singleLine="true"
        android:autofillHints="emailAddress"/>

    <EditText
        android:id="@+id/password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/passwort"
        android:inputType="textPassword"
        android:paddingTop="10dp"
        android:singleLine="true"
        android:autofillHints="password"/>

    <EditText
        android:id="@+id/password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/passwort"
        android:inputType="textPassword"
        android:paddingTop="10dp"
        android:singleLine="true"
        android:autofillHints="password"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="40dp">

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/zu_den_fragen"
            app:cornerRadius="50dp" />

    </LinearLayout>

</LinearLayout>